@@ -281,7 +281,7 @@ def dependencies(target):
 
     return (('ffmpeg-cdist', '96d67de', ffmpeg_options),
             ('libdcp', '4e38f82'),
-            ('libsub', '4e4e5f7'))
+            ('libsub', 'd79b29f'))
 
 def configure_options(target):
     opt = ''
