@@ -1,3 +1,7 @@
+2016-02-12  Carl Hetherington  <cth@carlh.net>
+
+	* Add basic support for SSA (SubStation Alpha) subtitles (#128).
+
 2016-02-09  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.6.20 released.
